Lexer/y.output
Grammar

    0 $accept: server_list $end

    1 server_list: server
    2            | server_list server

    3 server: SERVER LC DOMAIN COLON STRING_LITERAL SEMICOLON SCHEME COLON STRING_LITERAL SEMICOLON PORT COLON STRING_LITERAL SEMICOLON location_list RC

    4 location_list: location
    5              | location_list location

    6 location: LOCATION STRING_LITERAL LC statement_list RC

    7 statement_list: statement
    8               | statement_list statement

    9 statement: expression SEMICOLON
   10          | if_statement

   11 if_statement: IF LP compare_expression RP block

   12 expression: compare_expression
   13           | encode_expression
   14           | decode_expression
   15           | return_expression
   16           | match_expression
   17           | parse_expression
   18           | define_expression

   19 compare_expression: GREATER argument_list
   20                   | SMALLER argument_list
   21                   | EQUAL argument_list

   22 encode_expression: ENCODE argument_list

   23 decode_expression: DECODE argument_list

   24 return_expression: RETURN argument_list

   25 match_expression: MATCH argument_list

   26 parse_expression: PARSE argument_list

   27 define_expression: DEFINE argument_list

   28 argument_list: STRING_LITERAL
   29              | argument_list STRING_LITERAL

   30 block: LC statement_list RC
   31      | LC RC


Terminals, with rules where they appear

$end (0) 0
error (256)
STRING_LITERAL (258) 3 6 28 29
SERVER (259) 3
DOMAIN (260) 3
PORT (261) 3
LOCATION (262) 6
LP (263) 11
RP (264) 11
LC (265) 3 6 30 31
RC (266) 3 6 30 31
SEMICOLON (267) 3 9
COLON (268) 3
IF (269) 11
ENCODE (270) 22
DECODE (271) 23
RETURN (272) 24
MATCH (273) 25
PARSE (274) 26
DEFINE (275) 27
GREATER (276) 19
EQUAL (277) 21
SMALLER (278) 20
SCHEME (279) 3


Nonterminals, with rules where they appear

$accept (25)
    on left: 0
server_list (26)
    on left: 1 2, on right: 0 2
server (27)
    on left: 3, on right: 1 2
location_list (28)
    on left: 4 5, on right: 3 5
location (29)
    on left: 6, on right: 4 5
statement_list (30)
    on left: 7 8, on right: 6 8 30
statement (31)
    on left: 9 10, on right: 7 8
if_statement (32)
    on left: 11, on right: 10
expression (33)
    on left: 12 13 14 15 16 17 18, on right: 9
compare_expression (34)
    on left: 19 20 21, on right: 11 12
encode_expression (35)
    on left: 22, on right: 13
decode_expression (36)
    on left: 23, on right: 14
return_expression (37)
    on left: 24, on right: 15
match_expression (38)
    on left: 25, on right: 16
parse_expression (39)
    on left: 26, on right: 17
define_expression (40)
    on left: 27, on right: 18
argument_list (41)
    on left: 28 29, on right: 19 20 21 22 23 24 25 26 27 29
block (42)
    on left: 30 31, on right: 11


state 0

    0 $accept: . server_list $end

    SERVER  shift, and go to state 1

    server_list  go to state 2
    server       go to state 3


state 1

    3 server: SERVER . LC DOMAIN COLON STRING_LITERAL SEMICOLON SCHEME COLON STRING_LITERAL SEMICOLON PORT COLON STRING_LITERAL SEMICOLON location_list RC

    LC  shift, and go to state 4


state 2

    0 $accept: server_list . $end
    2 server_list: server_list . server

    $end    shift, and go to state 5
    SERVER  shift, and go to state 1

    server  go to state 6


state 3

    1 server_list: server .

    $default  reduce using rule 1 (server_list)


state 4

    3 server: SERVER LC . DOMAIN COLON STRING_LITERAL SEMICOLON SCHEME COLON STRING_LITERAL SEMICOLON PORT COLON STRING_LITERAL SEMICOLON location_list RC

    DOMAIN  shift, and go to state 7


state 5

    0 $accept: server_list $end .

    $default  accept


state 6

    2 server_list: server_list server .

    $default  reduce using rule 2 (server_list)


state 7

    3 server: SERVER LC DOMAIN . COLON STRING_LITERAL SEMICOLON SCHEME COLON STRING_LITERAL SEMICOLON PORT COLON STRING_LITERAL SEMICOLON location_list RC

    COLON  shift, and go to state 8


state 8

    3 server: SERVER LC DOMAIN COLON . STRING_LITERAL SEMICOLON SCHEME COLON STRING_LITERAL SEMICOLON PORT COLON STRING_LITERAL SEMICOLON location_list RC

    STRING_LITERAL  shift, and go to state 9


state 9

    3 server: SERVER LC DOMAIN COLON STRING_LITERAL . SEMICOLON SCHEME COLON STRING_LITERAL SEMICOLON PORT COLON STRING_LITERAL SEMICOLON location_list RC

    SEMICOLON  shift, and go to state 10


state 10

    3 server: SERVER LC DOMAIN COLON STRING_LITERAL SEMICOLON . SCHEME COLON STRING_LITERAL SEMICOLON PORT COLON STRING_LITERAL SEMICOLON location_list RC

    SCHEME  shift, and go to state 11


state 11

    3 server: SERVER LC DOMAIN COLON STRING_LITERAL SEMICOLON SCHEME . COLON STRING_LITERAL SEMICOLON PORT COLON STRING_LITERAL SEMICOLON location_list RC

    COLON  shift, and go to state 12


state 12

    3 server: SERVER LC DOMAIN COLON STRING_LITERAL SEMICOLON SCHEME COLON . STRING_LITERAL SEMICOLON PORT COLON STRING_LITERAL SEMICOLON location_list RC

    STRING_LITERAL  shift, and go to state 13


state 13

    3 server: SERVER LC DOMAIN COLON STRING_LITERAL SEMICOLON SCHEME COLON STRING_LITERAL . SEMICOLON PORT COLON STRING_LITERAL SEMICOLON location_list RC

    SEMICOLON  shift, and go to state 14


state 14

    3 server: SERVER LC DOMAIN COLON STRING_LITERAL SEMICOLON SCHEME COLON STRING_LITERAL SEMICOLON . PORT COLON STRING_LITERAL SEMICOLON location_list RC

    PORT  shift, and go to state 15


state 15

    3 server: SERVER LC DOMAIN COLON STRING_LITERAL SEMICOLON SCHEME COLON STRING_LITERAL SEMICOLON PORT . COLON STRING_LITERAL SEMICOLON location_list RC

    COLON  shift, and go to state 16


state 16

    3 server: SERVER LC DOMAIN COLON STRING_LITERAL SEMICOLON SCHEME COLON STRING_LITERAL SEMICOLON PORT COLON . STRING_LITERAL SEMICOLON location_list RC

    STRING_LITERAL  shift, and go to state 17


state 17

    3 server: SERVER LC DOMAIN COLON STRING_LITERAL SEMICOLON SCHEME COLON STRING_LITERAL SEMICOLON PORT COLON STRING_LITERAL . SEMICOLON location_list RC

    SEMICOLON  shift, and go to state 18


state 18

    3 server: SERVER LC DOMAIN COLON STRING_LITERAL SEMICOLON SCHEME COLON STRING_LITERAL SEMICOLON PORT COLON STRING_LITERAL SEMICOLON . location_list RC

    LOCATION  shift, and go to state 19

    location_list  go to state 20
    location       go to state 21


state 19

    6 location: LOCATION . STRING_LITERAL LC statement_list RC

    STRING_LITERAL  shift, and go to state 22


state 20

    3 server: SERVER LC DOMAIN COLON STRING_LITERAL SEMICOLON SCHEME COLON STRING_LITERAL SEMICOLON PORT COLON STRING_LITERAL SEMICOLON location_list . RC
    5 location_list: location_list . location

    LOCATION  shift, and go to state 19
    RC        shift, and go to state 23

    location  go to state 24


state 21

    4 location_list: location .

    $default  reduce using rule 4 (location_list)


state 22

    6 location: LOCATION STRING_LITERAL . LC statement_list RC

    LC  shift, and go to state 25


state 23

    3 server: SERVER LC DOMAIN COLON STRING_LITERAL SEMICOLON SCHEME COLON STRING_LITERAL SEMICOLON PORT COLON STRING_LITERAL SEMICOLON location_list RC .

    $default  reduce using rule 3 (server)


state 24

    5 location_list: location_list location .

    $default  reduce using rule 5 (location_list)


state 25

    6 location: LOCATION STRING_LITERAL LC . statement_list RC

    IF       shift, and go to state 26
    ENCODE   shift, and go to state 27
    DECODE   shift, and go to state 28
    RETURN   shift, and go to state 29
    MATCH    shift, and go to state 30
    PARSE    shift, and go to state 31
    DEFINE   shift, and go to state 32
    GREATER  shift, and go to state 33
    EQUAL    shift, and go to state 34
    SMALLER  shift, and go to state 35

    statement_list      go to state 36
    statement           go to state 37
    if_statement        go to state 38
    expression          go to state 39
    compare_expression  go to state 40
    encode_expression   go to state 41
    decode_expression   go to state 42
    return_expression   go to state 43
    match_expression    go to state 44
    parse_expression    go to state 45
    define_expression   go to state 46


state 26

   11 if_statement: IF . LP compare_expression RP block

    LP  shift, and go to state 47


state 27

   22 encode_expression: ENCODE . argument_list

    STRING_LITERAL  shift, and go to state 48

    argument_list  go to state 49


state 28

   23 decode_expression: DECODE . argument_list

    STRING_LITERAL  shift, and go to state 48

    argument_list  go to state 50


state 29

   24 return_expression: RETURN . argument_list

    STRING_LITERAL  shift, and go to state 48

    argument_list  go to state 51


state 30

   25 match_expression: MATCH . argument_list

    STRING_LITERAL  shift, and go to state 48

    argument_list  go to state 52


state 31

   26 parse_expression: PARSE . argument_list

    STRING_LITERAL  shift, and go to state 48

    argument_list  go to state 53


state 32

   27 define_expression: DEFINE . argument_list

    STRING_LITERAL  shift, and go to state 48

    argument_list  go to state 54


state 33

   19 compare_expression: GREATER . argument_list

    STRING_LITERAL  shift, and go to state 48

    argument_list  go to state 55


state 34

   21 compare_expression: EQUAL . argument_list

    STRING_LITERAL  shift, and go to state 48

    argument_list  go to state 56


state 35

   20 compare_expression: SMALLER . argument_list

    STRING_LITERAL  shift, and go to state 48

    argument_list  go to state 57


state 36

    6 location: LOCATION STRING_LITERAL LC statement_list . RC
    8 statement_list: statement_list . statement

    RC       shift, and go to state 58
    IF       shift, and go to state 26
    ENCODE   shift, and go to state 27
    DECODE   shift, and go to state 28
    RETURN   shift, and go to state 29
    MATCH    shift, and go to state 30
    PARSE    shift, and go to state 31
    DEFINE   shift, and go to state 32
    GREATER  shift, and go to state 33
    EQUAL    shift, and go to state 34
    SMALLER  shift, and go to state 35

    statement           go to state 59
    if_statement        go to state 38
    expression          go to state 39
    compare_expression  go to state 40
    encode_expression   go to state 41
    decode_expression   go to state 42
    return_expression   go to state 43
    match_expression    go to state 44
    parse_expression    go to state 45
    define_expression   go to state 46


state 37

    7 statement_list: statement .

    $default  reduce using rule 7 (statement_list)


state 38

   10 statement: if_statement .

    $default  reduce using rule 10 (statement)


state 39

    9 statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 60


state 40

   12 expression: compare_expression .

    $default  reduce using rule 12 (expression)


state 41

   13 expression: encode_expression .

    $default  reduce using rule 13 (expression)


state 42

   14 expression: decode_expression .

    $default  reduce using rule 14 (expression)


state 43

   15 expression: return_expression .

    $default  reduce using rule 15 (expression)


state 44

   16 expression: match_expression .

    $default  reduce using rule 16 (expression)


state 45

   17 expression: parse_expression .

    $default  reduce using rule 17 (expression)


state 46

   18 expression: define_expression .

    $default  reduce using rule 18 (expression)


state 47

   11 if_statement: IF LP . compare_expression RP block

    GREATER  shift, and go to state 33
    EQUAL    shift, and go to state 34
    SMALLER  shift, and go to state 35

    compare_expression  go to state 61


state 48

   28 argument_list: STRING_LITERAL .

    $default  reduce using rule 28 (argument_list)


state 49

   22 encode_expression: ENCODE argument_list .
   29 argument_list: argument_list . STRING_LITERAL

    STRING_LITERAL  shift, and go to state 62

    $default  reduce using rule 22 (encode_expression)


state 50

   23 decode_expression: DECODE argument_list .
   29 argument_list: argument_list . STRING_LITERAL

    STRING_LITERAL  shift, and go to state 62

    $default  reduce using rule 23 (decode_expression)


state 51

   24 return_expression: RETURN argument_list .
   29 argument_list: argument_list . STRING_LITERAL

    STRING_LITERAL  shift, and go to state 62

    $default  reduce using rule 24 (return_expression)


state 52

   25 match_expression: MATCH argument_list .
   29 argument_list: argument_list . STRING_LITERAL

    STRING_LITERAL  shift, and go to state 62

    $default  reduce using rule 25 (match_expression)


state 53

   26 parse_expression: PARSE argument_list .
   29 argument_list: argument_list . STRING_LITERAL

    STRING_LITERAL  shift, and go to state 62

    $default  reduce using rule 26 (parse_expression)


state 54

   27 define_expression: DEFINE argument_list .
   29 argument_list: argument_list . STRING_LITERAL

    STRING_LITERAL  shift, and go to state 62

    $default  reduce using rule 27 (define_expression)


state 55

   19 compare_expression: GREATER argument_list .
   29 argument_list: argument_list . STRING_LITERAL

    STRING_LITERAL  shift, and go to state 62

    $default  reduce using rule 19 (compare_expression)


state 56

   21 compare_expression: EQUAL argument_list .
   29 argument_list: argument_list . STRING_LITERAL

    STRING_LITERAL  shift, and go to state 62

    $default  reduce using rule 21 (compare_expression)


state 57

   20 compare_expression: SMALLER argument_list .
   29 argument_list: argument_list . STRING_LITERAL

    STRING_LITERAL  shift, and go to state 62

    $default  reduce using rule 20 (compare_expression)


state 58

    6 location: LOCATION STRING_LITERAL LC statement_list RC .

    $default  reduce using rule 6 (location)


state 59

    8 statement_list: statement_list statement .

    $default  reduce using rule 8 (statement_list)


state 60

    9 statement: expression SEMICOLON .

    $default  reduce using rule 9 (statement)


state 61

   11 if_statement: IF LP compare_expression . RP block

    RP  shift, and go to state 63


state 62

   29 argument_list: argument_list STRING_LITERAL .

    $default  reduce using rule 29 (argument_list)


state 63

   11 if_statement: IF LP compare_expression RP . block

    LC  shift, and go to state 64

    block  go to state 65


state 64

   30 block: LC . statement_list RC
   31      | LC . RC

    RC       shift, and go to state 66
    IF       shift, and go to state 26
    ENCODE   shift, and go to state 27
    DECODE   shift, and go to state 28
    RETURN   shift, and go to state 29
    MATCH    shift, and go to state 30
    PARSE    shift, and go to state 31
    DEFINE   shift, and go to state 32
    GREATER  shift, and go to state 33
    EQUAL    shift, and go to state 34
    SMALLER  shift, and go to state 35

    statement_list      go to state 67
    statement           go to state 37
    if_statement        go to state 38
    expression          go to state 39
    compare_expression  go to state 40
    encode_expression   go to state 41
    decode_expression   go to state 42
    return_expression   go to state 43
    match_expression    go to state 44
    parse_expression    go to state 45
    define_expression   go to state 46


state 65

   11 if_statement: IF LP compare_expression RP block .

    $default  reduce using rule 11 (if_statement)


state 66

   31 block: LC RC .

    $default  reduce using rule 31 (block)


state 67

    8 statement_list: statement_list . statement
   30 block: LC statement_list . RC

    RC       shift, and go to state 68
    IF       shift, and go to state 26
    ENCODE   shift, and go to state 27
    DECODE   shift, and go to state 28
    RETURN   shift, and go to state 29
    MATCH    shift, and go to state 30
    PARSE    shift, and go to state 31
    DEFINE   shift, and go to state 32
    GREATER  shift, and go to state 33
    EQUAL    shift, and go to state 34
    SMALLER  shift, and go to state 35

    statement           go to state 59
    if_statement        go to state 38
    expression          go to state 39
    compare_expression  go to state 40
    encode_expression   go to state 41
    decode_expression   go to state 42
    return_expression   go to state 43
    match_expression    go to state 44
    parse_expression    go to state 45
    define_expression   go to state 46


state 68

   30 block: LC statement_list RC .

    $default  reduce using rule 30 (block)
